# Tool-Trace-RAG

./: .env.example  .gitignore  README.md  SETUP.md  TODO.md  pyproject.toml
analysis/: README.md
analysis/scripts/: ablation_analysis.py  analyze_experiment.py  analyze_learning_curve.py  common.py  compare_ablations.py  experiment_analysis.py  learning_curve.py  plots.py
data/: eval_tasks_milestone_02.json  mock_customer_support.json
scripts/: index_traces.py  query_traces.py  run_eval.py  run_experiment.py  run_sequential_study.py  run_task.py
tests/: test_ablation_analysis.py  test_agent_loop.py  test_agent_loop_seams.py  test_analysis_cli.py  test_analysis_common.py  test_analysis_plots.py  test_bootstrap.py  test_cli.py  test_config.py  test_customer_support_domain.py  test_customer_support_tools.py  test_eval_dataset.py  test_eval_formatting.py  test_evaluator.py  test_experiment_analysis.py  test_experiment_runner.py  test_fake_provider.py  test_learning_curve_analysis.py  test_memory_documents.py  test_memory_formatting.py  test_memory_injection.py  test_memory_retrieval.py  test_online_memory.py  test_openai_compatible_provider.py  test_run_experiment_cli.py  test_run_task_cli.py  test_sequential_study.py  test_tool_registry.py  test_trace_ingestion.py  test_trace_schema.py  test_trace_store.py  test_vector_store.py
tool_trace_rag/: agent.py  agent_loop.py  bootstrap.py  cli.py  config.py  tool_execution.py
tool_trace_rag/eval/: __init__.py  dataset.py  evaluator.py  formatting.py  schema.py
tool_trace_rag/experiments/: __init__.py  runner.py  (+2 more)
(+19 files in other folders)
